# cookiecutter-pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.package_name}}/: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  LICENSE  README.md  RELEASE.md  pyproject.toml  tox.ini
{{cookiecutter.package_name}}/.github/workflows/: main.yml
{{cookiecutter.package_name}}/docs/: conf.py  index.rst
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.package_name}}/tests/: test_{{cookiecutter.package_name}}.py
